@@ -8,12 +8,17 @@ be introduced in future versions. Released on @RELEASE_DATE@.
 
 CHANGES
 
- * Bugfix in SentenceFactory, DPT parser was not automatically registered. 
- * Parsing methods in SentenceId now validate the given String before parsing the id.
+ * Bugfix in SentenceFactory, DPT parser was not automatically registered.
+  
+ * Parsing methods in SentenceId now validates the given String before parsing
+   the id.
   
 NEW FEATURES
  
  * Added method for unregistering parsers in SentenceFactory.
+ 
+ * SentenceParser; added methods for setting double and integer values with
+   leading zeros. Double values can also be rounded to certain precision.
 
 KNOWN ISSUES
   
